--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "5.2.1",
     "react-scripts": "4.0.3",
+    "ts-migration": "^1.0.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -37,5 +38,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.4"
   }
 }
